YTDB-631: return unmodifiable List from PathNode.toList()